--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,6 +3,8 @@ FROM node:lts
 
 # Set working directory
 WORKDIR /app
+RUN npm install pm2@latest -g
+RUN pm2 startup
 
 # Copy package files and install dependencies
 COPY package.json package-lock.json ./
@@ -10,9 +12,14 @@ RUN npm install
 
 # Copy application files
 COPY . .
+RUN chmod +x script.sh
+
+RUN mkdir /home/foundryvtt
+RUN mkdir /home/foundrydata
 
 # Expose the port
 EXPOSE 3000
+EXPOSE 30000
 
 # Run the server
 CMD ["node", "server.js"]
