--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,23 +3,28 @@ FROM node:lts
 
 # Set working directory
 WORKDIR /app
-RUN npm install pm2@latest -g
-RUN pm2 startup
 
-# Copy package files and install dependencies
-COPY package.json package-lock.json ./
-RUN npm install
+# Install PM2 globally
+RUN npm install pm2@latest -g
 
 # Copy application files
-COPY . .
-RUN chmod +x script.sh
+COPY package.json package-lock.json main.js ecosystem.config.js ./
+RUN npm install
 
-RUN mkdir /home/foundryvtt
-RUN mkdir /home/foundrydata
+# Copy scripts
+COPY update.sh install.sh /scripts/
+RUN chmod +x /scripts/update.sh /scripts/install.sh
 
-# Expose the port
+# Create directories
+RUN mkdir -p /home/foundryvtt
+RUN mkdir -p /home/foundrydata
+
+# Mark directories as volumes
+VOLUME ["/home/foundryvtt", "/home/foundrydata"]
+
+# Expose ports
 EXPOSE 3000
 EXPOSE 30000
 
-# Run the server
-CMD ["node", "server.js"]
+# CMD to initialize and start the app
+CMD ["/scripts/install.sh"]
