--- a/src/package.json
+++ b/src/package.json
@@ -2,9 +2,9 @@
     "name": "script-runner",
     "version": "1.0.0",
     "description": "Node app to run shell scripts",
-    "main": "server.js",
+    "main": "main.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node main.js"
     },
     "dependencies": {
         "express": "^4.21.2"
