--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and Tag Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/foundry-server:latest -f src/Dockerfile client
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/foundry-server:latest -f src/Dockerfile src
 
     - name: Push Docker Image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/foundry-server:latest
