--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,8 +19,20 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Extract version from package.json
+      id: version
+      run: |
+        VERSION=$(jq -r .version src/package.json)
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+
     - name: Build and Tag Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/foundry-server:latest -f src/Dockerfile src
+      run: |
+        docker build \
+          -t ${{ secrets.DOCKER_USERNAME }}/foundry-server:latest \
+          -t ${{ secrets.DOCKER_USERNAME }}/foundry-server:${{ env.VERSION }} \
+          -f src/Dockerfile src
 
     - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/foundry-server:latest
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/foundry-server:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/foundry-server:${{ env.VERSION }}
