Add nonroot user for foundry

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -9,10 +9,16 @@ RUN npm install
 COPY update.sh install.sh /scripts/
 RUN chmod +x /scripts/update.sh /scripts/install.sh
 
-RUN mkdir -p /home/foundryvtt
-RUN mkdir -p /home/foundrydata
+# Create non-root user
+RUN groupadd -r -g 1000 foundry && useradd -r -u 1000 -g foundry foundry
+
+RUN mkdir -p /home/foundryvtt /home/foundrydata && \
+    chown -R foundry:foundry /home/foundryvtt /home/foundrydata /app /scripts
 
 VOLUME ["/home/foundryvtt", "/home/foundrydata"]
+
+# Switch to non-root user
+USER foundry
 
 EXPOSE 3000
 EXPOSE 30000
