Use existing node user

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -9,16 +9,14 @@ RUN npm install
 COPY update.sh install.sh /scripts/
 RUN chmod +x /scripts/update.sh /scripts/install.sh
 
-# Create non-root user
-RUN groupadd -r -g 1000 foundry && useradd -r -u 1000 -g foundry foundry
-
+# Use existing node user (UID 1000)
 RUN mkdir -p /home/foundryvtt /home/foundrydata && \
-    chown -R foundry:foundry /home/foundryvtt /home/foundrydata /app /scripts
+    chown -R node:node /home/foundryvtt /home/foundrydata /app /scripts
 
 VOLUME ["/home/foundryvtt", "/home/foundrydata"]
 
 # Switch to non-root user
-USER foundry
+USER node
 
 EXPOSE 3000
 EXPOSE 30000
